# rcypher

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  TODO
.github/workflows/: release.yml  rust.yml
.taska/: mutations.jsonl
benches/: argon2_benchmark.rs
docs/: auth-protocol.md  crate_release_process.md
examples/: custom_format.rs
rcypher-cli/: Cargo.toml  LICENSE
rcypher-cli/src/: main.rs
rcypher-cli/src/cli/: backend.rs  completer.rs  interactive.rs  mod.rs  update.rs  utils.rs
rcypher-cli/tests/: cli_tests.rs  enroll_pty.rs
scripts/: install.sh  release.sh
src/: constants.rs  data_container.rs  file_io.rs  lib.rs  main.rs  path_utils.rs  security.rs  utils.rs  version.rs
src/auth/: factor.rs  fido2.rs  format.rs  header.rs  keyslot.rs  mod.rs  parser.rs  policy.rs  vault.rs
src/auth/policy/: mod.rs  parser.rs  sharing.rs  tree.rs
src/cli/: completer.rs  init.rs  interactive.rs  mod.rs  prompt.rs  strength.rs  unlock.rs  update.rs  utils.rs
src/container/: mod.rs  store.rs  v7.rs  v8.rs
src/crypto/: cipher.rs  domain_keys.rs  encryption_domain.rs  file_ops.rs  key.rs  mod.rs  stream_ops.rs  utils.rs
src/storage/: data.rs  mod.rs  secret_store.rs  serialization.rs  store.rs  v4.rs  v5.rs  value.rs
tests/: cli_tests.rs  encryption_tests.rs  integration_tests.rs  storage_tests.rs  storage_v4_tests.rs  storage_v5_tests.rs
