[package]
name = "rcypher"
version = "0.1.0"
edition = "2024"
description = "A CLI for secure password management"
repository = "https://github.com/justpresident/rcypher"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["password", "security", "cli"]
categories = ["security", "command-line-utilities"]

[dependencies]
aes = "0.8"
anyhow = "1.0"
arboard = "3"
argon2 = "0.5"
bincode = "2.0.1"
cbc = "0.1"
chrono = "0.4"
cipher = { version = "0.4", features = ["block-padding"] }
clap = { version = "4.4", features = ["derive"] }
hmac = "0.12"
indicatif = "0.18.3"
nix = { version = "0.30.1", features = ["fs", "process"] }
num_enum = "0.7.5"
rand = "0.9.2"
regex = "1.10"
rpassword = "7.3"
rustyline = "13.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tempfile = "3.23.0"
zeroize = "1.8.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.dev]
opt-level = 0
lto = "none"

[[bench]]
name = "argon2_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
debug = "none"
strip = "symbols"
