[package]
name = "rcypher"
version = "0.2.0"
edition = "2024"
description = "Reusable authenticated encryption (Argon2id + AES-256-CBC + HMAC-SHA256) for password-protected, versioned encrypted storage"
repository = "https://github.com/justpresident/rcypher"
readme = "README.md"
license = "Apache-2.0"
keywords = ["encryption", "argon2", "aes", "password", "security"]
categories = ["cryptography"]
# Keep repo-meta out of the published crate (docs hold the release scratch file).
exclude = ["/docs", "/.taska", "/.github", "/coverage", "/AGENTS.md", "/demo.gif", "/scripts"]

[workspace]
members = ["rcypher-cli"]

[features]
default = ["storage"]
# Bundled key-value storage format (rcypher's own). Disable to use only the
# crypto envelope (`Cypher`/`EncryptionKey`) with your own serialization.
storage = ["dep:regex"]

[dependencies]
aes = "0.8"
anyhow = "1.0"
argon2 = "0.5"
bincode = "2.0.1"
cbc = "0.1"
cipher = { version = "0.4", features = ["block-padding"] }
hmac = "0.12"
nix = { version = "0.30.1", features = ["process", "signal"] }
num_enum = "0.7.5"
rand = "0.9.2"
regex = { version = "1.10", optional = true }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tempfile = "3.23.0"
zeroize = "1.8.2"

[profile.dev]
opt-level = 0
lto = "none"

[[bench]]
name = "argon2_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
debug = "none"
strip = "symbols"
