[package]
name = "rcypher"
version = "0.3.0"
edition = "2024"
description = "Reusable authenticated encryption (Argon2id + AES-256-CBC + HMAC-SHA256) for password-protected, versioned encrypted storage"
repository = "https://github.com/justpresident/rcypher"
readme = "README.md"
license = "Apache-2.0"
keywords = ["encryption", "argon2", "aes", "password", "security"]
categories = ["cryptography"]
# Keep repo-meta out of the published crate (docs hold the release scratch file).
exclude = ["/docs", "/.taska", "/.github", "/coverage", "/AGENTS.md", "/demo.gif", "/scripts"]

[workspace]
members = ["rcypher-cli"]

[features]
default = ["storage"]
# Bundled key-value storage format (rcypher's own). Disable to use only the
# crypto envelope (`Cypher`/`EncryptionKey`) with your own serialization.
storage = ["dep:regex"]
# Hardware FIDO2 security-key factors via the `hmac-secret` extension. Adds the
# `rcypher::fido2` device module (CTAP over USB-HID). The pure FIDO2 KEK/enroll/
# unlock primitives are always available; this only gates the device I/O, which
# pulls native deps (hidapi → libudev/libusb; a CTAP PIN crypto backend).
fido2 = ["dep:ctap-hid-fido2"]
# Reusable interactive CLI plumbing (`rcypher::cli`): password/PIN prompts, the
# zxcvbn password-strength gate, and the policy-unlock prompt loop — for building
# an rcypher-like command-line tool on top of the library. Pulls rpassword + zxcvbn
# and nix's `fs` feature (for direct `/dev/tty` I/O). Combine with `fido2` to also
# drive a security-key touch/PIN at unlock.
cli = ["dep:rpassword", "dep:zxcvbn", "nix/fs"]

[dependencies]
aes = "0.8"
anyhow = "1.0"
argon2 = "0.5"
bincode = "2.0.1"
cbc = "0.1"
cipher = { version = "0.4", features = ["block-padding"] }
ctap-hid-fido2 = { version = "3.5", optional = true }
hkdf = "0.12"
hmac = "0.12"
nix = { version = "0.30.1", features = ["process", "signal"] }
num_enum = "0.7.5"
rand = "0.9.3"
regex = { version = "1.10", optional = true }
rpassword = { version = "7.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
subtle = "2.6"
tempfile = "3.23.0"
zeroize = "1.8.2"
zxcvbn = { version = "3.1.1", optional = true }

[profile.dev]
opt-level = 0
lto = "none"

[[bench]]
name = "argon2_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
debug = "none"
strip = "symbols"
