[package]
name = "rcypher-cli"
version = "0.2.0"
edition = "2024"
description = "A CLI for secure password management, built on the rcypher encryption library"
repository = "https://github.com/justpresident/rcypher"
readme = "../README.md"
license = "Apache-2.0"
keywords = ["password", "security", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "rcypher"
path = "src/main.rs"

[features]
default = ["fido2"]
# Hardware FIDO2 security-key support (enrol/unlock with a security key), on by
# default. Build with `--no-default-features` for an environment without the native
# USB-HID build deps (libudev/hidapi + pkg-config); the FIDO2 commands then report
# that support isn't compiled in.
fido2 = ["rcypher/fido2"]

[dependencies]
# Interactive plumbing (prompts, strength gate, unlock loop) comes from the lib's
# `cli` feature; this crate is a thin shell over it.
rcypher = { path = "..", version = "0.2.0", features = ["storage", "cli"] }
anyhow = "1.0"
arboard = "3"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.18.3"
nix = { version = "0.30.1", features = ["fs", "signal", "term", "time"] }
rustyline = "13.0"
zeroize = "1.8.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rexpect = "0.7.1"
tempfile = "3.23.0"
